--- a/PDF2TEXT/English.lproj/InfoPlist.strings
+++ b/PDF2TEXT/English.lproj/InfoPlist.strings
@@ -1,1 +1,1 @@
-﻿/* Localized versions of Info.plist keys */CFBundleName = "PDF2TEXT";CFBundleShortVersionString = "1.0";CFBundleGetInfoString = "PDF2TEXT version 1.0, Copyright 2014 miyako.";
+/* Localized versions of Info.plist keys */CFBundleName = "PDF2TEXT";CFBundleShortVersionString = "2.1";CFBundleGetInfoString = "PDF2TEXT version 2.1, Copyright 2019 miyako.";
